public/styles/style.css
html,
body,
.container {
    background-color: #212121;
    min-height: 100vh;
    min-width: 65vw;
    display: flex;
    flex-direction: column;
    padding: auto;
    font-family: 'Poppins', sans-serif;
    position: static;
    margin: 0 auto;
    padding-top: 20px;
}

nav {
    box-shadow: 0px 0px 5px rgb(0, 0, 0);
}

/* center navbar list */
@media (min-width: 993px) {
    .abs-center-x {
        position: absolute;
        top: 5px;
        left: 50%;
        transform: translateX(-50%);
    }
}

.poppins {
    font-family: 'Poppins', sans-serif;
}

.caveat {
    font-family: 'Caveat', cursive;
}

.langar {
    font-family: 'Langar', cursive;
    font-size: 1.5rem;
}

.leaderboard-text {
    color: rgb(99, 138, 157);
}

.recursive,
.alert,
.btn {
    font-family: 'Recursive', sans-serif;
}

.alert {
    padding-left: 15%;
    padding-right: 15%;
}

.input-group-text {
    background-color: black;
    color: rgb(179, 255, 0);
    border: 1px solid rgb(179, 255, 0);
}

.input-group-prepend {
    border-right: 1px solid rgb(179, 255, 0);
}

#registerForm {
    padding-left: 20%;
    padding-right: 20%;
}

#home-container-1 {
    min-height: 500px;
    min-width: 100%;
    background: radial-gradient(transparent, rgb(22, 22, 22)), url("../images/hanford-lam-studio-min.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    box-shadow: 0px 0px 100px 30px rgba(0, 0, 0, 0.713);
}

#brand {
    background-color: rgba(0, 0, 0, 0.734);
    box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.713);
    padding: 10px 25px 25px 25px;
}

#brand h1 {
    color: rgb(179, 255, 0);
}

#landscapeHeadshot {
    max-width: 100%;
    max-height: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    box-shadow: 10px 10px 20px black;
}

#portraitHeadshot {
    max-width: 100%;
    max-height: 100%;
    box-shadow: 10px 10px 20px black;
}

#backstage {
    max-width: 100%;
    max-height: 100%;
    box-shadow: 10px 10px 20px black;
}

.full-width-home-container-transparent {
    min-height: 500px;
    min-width: 100%;
    background-color: transparent;
}

.media-div {
    min-height: 300px;
    min-width: 100%;
    background-color: transparent;
}

.card-header,
.card-body {
    display: block;
    text-align: center;
    background-color: rgb(31, 31, 31);
    color: white;
    border: 1px solid white;
}

#priceRow {
    min-width: 90%;
}

.card-title {
    font-family: 'Recursive', sans-serif;
}

.jumbotron {
    background-color: rgb(37, 2, 61);
    border: 1px solid white;
    box-shadow: 0px 0px 100px 30px rgba(0, 0, 0, 0.713);
}

.jumbotron-transparent {
    background-color: transparent;
    border: none;
}

.jumbotron p {
    color: white;
}

h1 {
    color: #efcb00;
    font-weight: 500;
}

h2 {
    color: white;
}

.modal-body pre {
    white-space: pre-wrap;
}

main {
    flex: 1;
}

.footer {
    margin-top: auto;
}

.row-border {
    border: 1px solid white;
}

.col-sm {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 10px;
}

.col-sm p {
    margin: 0;
}

.pink-text {
    color: #e8226a;
}

.green-text {
    color: #8cff2f;
}

.palegreen-text {
    color: #9aff47;
}

.purple-text {
    color: #7e2dff;
}

.orange-text {
    color: #ff810c;
}

.blue-text {
    color: #45cdff;
}

.white-text {
    color: white;
}

.rhythm {
    background-color: rgba(255, 182, 198, 0.9);
}

.coordination {
    background-color: rgba(143, 194, 228, 0.9);
}

.tone {
    background-color: rgba(255, 232, 173, 0.9);
}

.dynamics {
    background-color: rgba(144, 218, 218, 0.9);
}

.stylistic {
    background-color: rgba(200, 173, 253, 0.9);
}

.bonus {
    background-color: rgb(226, 226, 226);
}

.eagle {
    background-color: #b6dcff;
}

.rubric-icon {
    height: 40px;
    width: 40px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.octopus {
    background-color: #ffd5bd;
}

.koala {
    background-color: #d8ffc5;
}

.jellyfish {
    background-color: #ffeeba;
}

.bear {
    background-color: #ffd7d7;
}

/* ASSESSMENT GRID */

.rubric-grid {
    background-color: rgb(226, 226, 226);
    border: 1px solid white;
    padding: 0;
}

.rubric-grid {
    margin: 0;
}

.rubric-grid div div {
    border: 1px solid white;
}

.rubric-grid input[type="radio"] {
    display: none;
}

.rubric-grid label {
    display: inline-block;
    cursor: pointer;
}

.rubric-grid input[type="radio"]:checked+label {
    font-weight: bold;
}

.answer-options input[type="radio"]:checked {
    font-weight: bold;
}

.row .col-sm {
    display: block;
}

hr {
    background-color: transparent;
    border-top: 1px solid white;
}

#weeklySnapshot pre {
    padding-left: 15%;
    padding-right: 15%;
}

.question-div {
    margin-bottom: 2rem;
    border-radius: 5px;
    border: 1px solid white;
    padding-top: 2rem;
    padding-bottom: 2rem;
    padding-left: 10%;
    padding-right: 10%;
    color: white;
    text-align: center;
}

#skill-mission-container {
    margin-bottom: 4rem;
    text-align: center;
}

#skill-mission-container img {
    margin-bottom: 0.6rem;
    margin-top: 0.6rem;
}

.task-div-complete {
    background-color: rgb(178, 255, 174);
    color: black;
    padding-right: 20%;
    padding-left: 20%;
}

.task-div-incomplete {
    background-color: rgb(255, 204, 204);
    color: black;
    padding-right: 20%;
    padding-left: 20%;
}

.correct-text {
    color: rgb(24, 141, 0)
}

.leaderboard-badge {
    margin-left: 0.5rem;
    margin-right: 0.5rem;
}

.section::before {
    display: block;
    content: " ";
    margin-top: -80px;
    height: 80px;
    visibility: hidden;
    pointer-events: none;
}

